# codesize

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/: config.rs  lib.rs  main.rs  parser.rs  scanner.rs
src/largecode/: cli.py  parser.py  scanner.py
tests/: test_parser.py  test_scanner.py
