[package]
name = "codesize"
version = "0.1.0"
edition = "2021"
description = "Report code size violations by file and function"
license = "MIT"
repository = "https://github.com/ChrisGVE/codesize"
homepage = "https://github.com/ChrisGVE/codesize"
documentation = "https://github.com/ChrisGVE/codesize#readme"
keywords = ["code-quality", "static-analysis", "metrics", "tree-sitter", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github", "config.toml"]

[lib]
name = "codesize"
path = "src/lib.rs"

[[bin]]
name = "codesize"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
csv = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
