[project]
name = "largecode"
version = "0.1.0"
description = "Report code size violations by file and function"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = []

[project.scripts]
LargeCode = "largecode.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
