[project]
name = "largecode"
version = "0.1.0"
description = "Report code size violations by file and function"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "tree-sitter",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-lua",
    "tree-sitter-python",
    "tree-sitter-rust",
    "tree-sitter-swift",
    "tree-sitter-typescript",
]

[project.scripts]
LargeCode = "largecode.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
]
